[gd_scene load_steps=4 format=3 uid="uid://dmosm4lm85gtt"]

[ext_resource type="Script" uid="uid://c7x0yrx14by1e" path="res://Scripts/Objects/timeDoor.gd" id="1_sxsni"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0alrq"]
size = Vector2(36, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxsni"]
size = Vector2(146, 88)

[node name="timeDoor" type="StaticBody2D"]
script = ExtResource("1_sxsni")

[node name="openTimer" type="Timer" parent="."]
one_shot = true

[node name="collisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0alrq")

[node name="interactionArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0
monitoring = false

[node name="bounds" type="CollisionShape2D" parent="interactionArea"]
shape = SubResource("RectangleShape2D_sxsni")
debug_color = Color(0, 1, 0.372549, 0.419608)

[connection signal="timeout" from="openTimer" to="." method="_timer_timeout"]
